--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
     <p>CONTACT</p>
 </div>
 
+<main>
+    <h1>
+        Sekolahkan disini dan akan berlatih menurut ajaran agama islam
+    </h1>
+    
+</main>
 
 <script src="./script.js"></script>
 </body>
